<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_PowerMonitor_Events" Id="{3ce885bf-36e6-4853-ac54-9da0d09a774d}">
    <Declaration><![CDATA[TYPE ST_PowerMonitor_Events :
STRUCT
	b_MBCommWarning 		: BOOL;
	b_MBCommError 			: BOOL;
	b_MBTimeoutWarning 		: BOOL;
	b_EL3443Warning			: BOOL;
	b_EL3443Error		: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>